# simple_tlsnotary_verifier

./: Cargo.toml  README.md
src/: example-json.presentation.tlsn  main.rs
